@@ -239,7 +239,8 @@ T:34:3:3
 T:34:5:5
 T:34:10:10
 X:A:32:10
-W:0:2:22:400
+#W:0:2:22:400
+W:0:2:22:4000
 R:100
 F:RES_ELEC | IGNORE_ELEC | SH_ELEC
 R:2
@@ -325,10 +326,11 @@ T:33:0:99
 R:100
 F:SEARCH | RES_BLIND | SEE_INVIS
 R:10
-F:ESP_UNIQUE
+F:R_ESP
+#F:ESP_UNIQUE
 #R:20
-R:1
-F:ESP_ALL
+#R:1
+#F:ESP_ALL
 
 N:31:of Infravision
 X:A:33:11
@@ -1153,7 +1155,7 @@ T:23:0:255
 T:24:0:255
 X:A:24:0
 #W:0:1:1:0
-W:0:1:5:0
+W:0:1:10:0
 C:-20:-20:-10:-10
 R:100
 F:LUCK
@@ -1169,7 +1171,7 @@ T:23:0:255
 T:24:0:255
 X:A:24:0
 #W:0:1:2:0
-W:0:1:8:0
+W:0:1:15:0
 C:-100:-100:0:0
 R:100
 F:NEVER_BLOW | HEAVY_CURSE | CURSED | AUTO_CURSE
@@ -1599,7 +1601,8 @@ F:AUTO_CURSE
 # Scrolls
 N:149:Fireproof
 X:B:0:1
-T:70:0:255
+#T:70:0:255
+T:70:8:255
 W:0:1:10:1000
 C:0:0:0:0
 R:100
@@ -1810,7 +1813,7 @@ F:INT | SPEED | SUST_INT | FREE_ACT | STEALTH | HIDE_TYPE | IGNORE_ACID
 N:170:of Invisibility
 X:A:31:20
 #W:40:1:18:3000
-W:40:1:28:30000
+W:40:1:58:30000
 C:0:0:10:5
 T:35:0:99
 R:100
@@ -1879,7 +1882,7 @@ R:100
 F:STR | BLOWS | AGGRAVATE | RES_FEAR | HIDE_TYPE | 
 F:IGNORE_ACID | IGNORE_FIRE | DRAIN_MANA
 
-# Staffs of wishing
+# Staffs of wishing only
 N:177:of Plenty
 X:A:0:1
 T:55:31:31
@@ -1894,11 +1897,12 @@ F:PVAL_M2
 N:178:Magical
 T:20:0:255
 X:B:24:4
-W:0:1:10:500
+#W:0:1:10:500
+W:0:1:80:10000
 C:0:0:0:0
 Z:stone to mud
 R:100
-
+#F:ACTIVATE
 # Rod
 N:179:of Simplicity
 #T:67:0:255
@@ -1944,6 +1948,8 @@ C:0:0:0:0
 T:30:0:99
 R:100
 F:FREE_ACT | RES_POIS
+R:10
+F:RES_DARK
 
 N:183:of Numenor
 T:19:0:255
@@ -1952,6 +1958,8 @@ W:0:4:21:50000
 C:10:10:0:0
 R:100
 F:REGEN | XTRA_MIGHT
+R:5
+F:R_ESP
 
 N:184:of the Avari
 X:A:32:20
@@ -2030,6 +2038,18 @@ F:IGNORE_ACID | IGNORE_ELEC | IGNORE_FIRE | IGNORE_COLD
 R:20
 F:OLD_RESIST
 R:5
+F:ANTIMAGIC_20
+
+# Wooden shields only
+N:190:of Insulation
+T:34:2:2
+T:34:4:4
+#T:34:10:10
+X:A:32:10
+W:0:2:24:5000
+R:100
+F:RES_ELEC | IGNORE_ELEC | ANTIMAGIC_10
+R:2
 F:ANTIMAGIC_20
 
 
