@@ -16258,6 +16258,8 @@ E:0:1:1:2:1:1
 O:20:20:20:20
 F:UNIQUE | FEMALE | CAN_SPEAK | DROP_CORPSE | DROP_SKELETON |
 F:FORCE_MAXHP | WILD_TOWN | WILD_ONLY | RAND_25
+# You're too annoying
+F:SPECIAL_GENE
 F:ONLY_ITEM | DROP_90 | DROP_GOOD | 
 F:OPEN_DOOR | DG_CURSE |
 F:NO_CONF | NO_SLEEP
